<?xml version="1.0" encoding="utf-8"?>
<ui version="4.0">
 <author>
    SPDX-FileCopyrightText: none
    SPDX-License-Identifier: GPL-3.0-or-later
  </author>
 <class>WdgDbExplorer</class>
 <widget class="QWidget" name="WdgDbExplorer">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>975</width>
    <height>545</height>
   </rect>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item column="1" row="0">
    <widget class="QTabWidget" name="tabWidget">
     <property name="currentIndex">
      <number>4</number>
     </property>
     <widget class="QWidget" name="tabStorages">
      <attribute name="title">
       <string>Storages</string>
      </attribute>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="QTableView" name="tableStorages">
         <attribute name="horizontalHeaderStretchLastSection">
          <bool>true</bool>
         </attribute>
        </widget>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="tabResources">
      <attribute name="title">
       <string>Resources</string>
      </attribute>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
            <widget class="QLabel" name="label">
             <property name="text">
              <string>Resource Type</string>
             </property>
            </widget>
           </item>
           <item>
            <widget class="QComboBox" name="cmbResourceTypes"/>
           </item>
          </layout>
         </item>
         <item>
          <widget class="QTableView" name="tableResources">
           <attribute name="horizontalHeaderStretchLastSection">
            <bool>true</bool>
           </attribute>
          </widget>
         </item>
        </layout>
       </item>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <item>
          <widget class="QLabel" name="lblThumbnail">
           <property name="text">
            <string>lblThumbnail</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QLabel" name="label_2">
           <property name="text">
            <string>Versions</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QTableView" name="tableVersions"/>
         </item>
        </layout>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="tabTags">
      <attribute name="title">
       <string>Tags</string>
      </attribute>
      <layout class="QVBoxLayout" name="verticalLayout_4">
       <item>
        <widget class="QTableView" name="tableTags">
         <attribute name="horizontalHeaderStretchLastSection">
          <bool>true</bool>
         </attribute>
        </widget>
       </item>
       <item>
        <widget class="QTableView" name="tableTaggedResources">
         <attribute name="horizontalHeaderStretchLastSection">
          <bool>true</bool>
         </attribute>
        </widget>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="tabSchema">
      <attribute name="title">
       <string>Schema Information</string>
      </attribute>
      <layout class="QFormLayout" name="formLayout">
       <item column="0" row="0">
        <widget class="QLabel" name="label_4">
         <property name="text">
          <string>Database Version</string>
         </property>
        </widget>
       </item>
       <item column="1" row="0">
        <widget class="QLabel" name="lblDatabaseVersion">
         <property name="text">
          <string>TextLabel</string>
         </property>
        </widget>
       </item>
       <item column="0" row="1">
        <widget class="QLabel" name="label_5">
         <property name="text">
          <string>Krita Version</string>
         </property>
        </widget>
       </item>
       <item column="1" row="1">
        <widget class="QLabel" name="lblKritaVersion">
         <property name="text">
          <string>TextLabel</string>
         </property>
        </widget>
       </item>
       <item column="0" row="2">
        <widget class="QLabel" name="label_6">
         <property name="text">
          <string>Creation Date</string>
         </property>
        </widget>
       </item>
       <item column="1" row="2">
        <widget class="QLabel" name="lblCreationDate">
         <property name="text">
          <string>TextLabel</string>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
     <widget class="QWidget" name="tabResourceView">
      <attribute name="title">
       <string>Resource View</string>
      </attribute>
      <layout class="QVBoxLayout" name="verticalLayout_5">
       <item>
        <layout class="QFormLayout" name="formLayout_2">
         <item column="0" row="0">
          <widget class="QLabel" name="label_7">
           <property name="text">
            <string>Resource Type:</string>
           </property>
          </widget>
         </item>
         <item column="1" row="0">
          <widget class="KComboBox" name="cmbRvResourceTypes"/>
         </item>
         <item column="0" row="1">
          <widget class="QLabel" name="label_8">
           <property name="text">
            <string>Tag:</string>
           </property>
          </widget>
         </item>
         <item column="1" row="1">
          <widget class="QComboBox" name="cmbRvTags">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item>
        <widget class="KisResourceItemListView" name="resourceItemView"/>
       </item>
       <item>
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
           <height>40</height>
          </size>
         </property>
        </spacer>
       </item>
      </layout>
     </widget>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>KComboBox</class>
   <extends>QComboBox</extends>
   <header location="global">kcombobox.h</header>
  </customwidget>
  <customwidget>
   <class>KisResourceItemListView</class>
   <extends>QListView</extends>
   <header location="global">KisResourceItemListView.h</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>